# opencv-raspicam-bindings

./: .gitignore  README.md  index.js  install.sh  package.json
build-scripts/: build_node.sh  build_opencv.sh  build_raspicam.sh
lib/opencv/: CMakeLists.txt  package.json
lib/opencv/lib/: opencv.js
lib/opencv/src/: bindings.cc  bindings.h  utils.h
src/: example.js
test/: example.js
